# invisible-variables-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  PROJECT_RULES.md  README.md  alembic.ini  docker-compose.yml  model_capabilities.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.agent/workflows/: map.md  verify.md
.gemini/: GEMINI.md
.github/workflows/: benchmark.yml  ci.yml  contract_drift.yml  governance.yml  migrations_check.yml
.gsd/: ARCHITECTURE.md  DEBUG.md  STACK.md  STATE.md
.gsd/examples/: cross-platform.md
.gsd/templates/: PLAN.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: .gitkeep  20260302_1958-c25bd1018dab_initial_schema.py  20260427_1200-a1b2c3d4e5f6_add_lv_llm_columns.py  20260427_1201-b2c3d4e5f6a7_add_experiment_llm_columns.py  20260427_1202-c3d4e5f6a7b8_add_explanation_feedback_table.py  20260427_1203-d4e5f6a7b8c9_add_dataset_column_metadata.py  20260427_1204-e5f6a7b8c9d0_extend_api_keys_for_multi_user.py  20260427_1205-f6a7b8c9d0e1_add_auth_audit_log.py  20260428_1000-a7b8c9d0e1f2_add_residual_kind_and_problem_type.py  20260428_1100-b8c9d0e1f2a3_add_hpo_columns_to_models.py  20260428_1200-c9d0e1f2a3b4_add_effect_size_ci_to_patterns.py  20260428_1300-d0e1f2a3b4c5_extend_pattern_type_constraint.py  20260428_1400-e1f2a3b4c5d6_add_latent_variable_annotations.py  20260428_1500-f2a3b4c5d6e7_add_share_tokens_and_access_log.py  20260429_0900-a3b4c5d6e7f8_add_dataset_column_versions.py  20260429_1000-b4c5d6e7f8a9_add_selective_inference_fields.py
benchmark_results/: benchmark_summary.csv
data/processed/: cleaned_dataset.csv
data/raw/: sample_dataset.csv
demo_datasets/: customer_churn_hidden_signal.csv  customer_churn_hidden_signal.metadata.json  delivery_hidden_weather.csv  delivery_hidden_weather.metadata.json  healthcare_hidden_risk.csv  healthcare_hidden_risk.metadata.json  manufacturing_hidden_shift.csv  manufacturing_hidden_shift.metadata.json  no_hidden_random_noise.csv  no_hidden_random_noise.metadata.json  retail_hidden_promo.csv  retail_hidden_promo.metadata.json
docs/: API.md  API_USAGE_GUIDE.md  ARCHITECTURE_OVERVIEW.md  BUSINESS_VALUE.md  CAPABILITY_MATRIX.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  HLD.md  LLD.md  PRESENTATION_SCRIPT.md  RESPONSE_CONTRACT.md  TROUBLESHOOTING.md  USER_GUIDE.md  VIVA_QA.md  branch_protection.md  competitive_baseline.md  model-selection-playbook.md  model_selection.md  phase_d_scoping.md  runbook.md  self_hosted_llm.md  testing.md
docs/runbooks/: auth_failure_spike.md  benchmark_regression.md  calibration_grid_mismatch.md  fpr_sentinel_red.md  groq_circuit_breaker_open.md  migration_head_conflict.md  postgres_backup.md  token_budget_exceeded.md  validation_failure_rate_spike.md
models/: best_model.pkl
ops/prometheus/: alerts.yaml
scripts/: benchmark_ive.py  calibrate_demo_datasets.py  generate_demo_datasets.py  generate_synthetic_data.py  search_repo.ps1  seed_db.py  setup_search.ps1  setup_search.sh  validate-skills.ps1  validate-skills.sh  validate-templates.ps1  validate-templates.sh  validate-workflows.ps1  validate-workflows.sh
src/api/: main.py
src/data_validation/: leakage_checks.py  missing_values.py  variance_checks.py
src/explainability/: explanation_generator.py  visualizations.py
src/ive/: __init__.py  config.py  main.py
src/latent_engine/: latent_construction.py
src/modeling/: confidence.py  train_model.py
src/pattern_discovery/: clustering.py  pattern_validation.py
src/reporting/: report_builder.py
src/residuals/: compute_residuals.py  filter_residuals.py  stability.py
src/validation/: proxy_validation.py  retraining_test.py
streamlit_app/: app.py
streamlit_app/components/: charts.py  sidebar.py  theme.py  widgets.py
streamlit_app/pages/: 01_upload.py  02_configure.py  03_monitor.py  04_results.py  05_compare.py  06_dataset_settings.py
tests/: conftest.py  test_codeowners_consistency.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: __init__.py  demo_csv_files.py  synthetic_datasets.py
tests/integration/: __init__.py  test_api_end_to_end.py  test_api_endpoints.py  test_job_processing.py  test_pipeline_e2e.py  test_pipeline_execution.py  test_sensitive_data_egress.py
tests/llm/: adversarial_corpus.json  behavioral_corpus.json
tests/statistical/: __init__.py  test_false_positives.py  test_ground_truth.py  test_reproducibility.py
tests/unit/: __init__.py  conftest.py  test_adversarial_corpus.py  test_api_key_repo.py  test_api_keys_endpoint.py  test_auth_resolver.py  test_auth_scopes.py  test_auth_utils.py  test_bca_bootstrap.py  test_behavioral_corpus.py  test_bootstrap_validator.py  test_bootstrap_validator_b4_b6.py  test_c2_1_audit.py  test_c3_audit.py  test_causal_dml.py  test_classifier_residuals.py  test_clustering.py  test_column_metadata_endpoint.py  test_construction_engine.py  test_cross_validator.py  test_cv_strategy_selection.py  test_dataset_column_metadata_repo.py  test_detection_engine.py  test_egress.py  test_ensemble.py  test_explanation_source_badge.py  (+45 more)
(+113 files in other folders)
